- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    6.7.0
- 
    None
- 
        
- 
        0ca230c2f (dev), 2311cbdea (6.8), 083cb1a1d (6.7), 5cd71ab73 (tqtc/lts-6.5)
Linux Ubuntu 22.04.4 / Wayland
Qt Creator 13.0.0
Device: Raspberry Pi4 64 bit
Steps to reproduce:
- Run the example on the device - https://doc.qt.io/qt-6/qtmultimedia-audiooutput-example.html
- Click 'Enable push mode'
- Click 'Enable pull mode'
- Click 'Suspend playback'
- Click 'Enable push mode'
- When the UI freezes, try to click multiple times on the UI
Expected: The user can change the output mode.
Actual: The screen becomes black after a while and I see these in the logs:
"/usr/examples/multimedia/audiooutput/audiooutput" QList("-platform", "wayland-egl") qt.qpa.wayland: qtvirtualkeyboard currently is not supported at client-side, use QT_IM_MODULE=qtvirtualkeyboard at compositor-side. QIODevice::seek (Generator): The device is not open The Wayland connection broke. Did the Wayland compositor die? quit Process exited with exit code 255 17:17:35: /usr/bin/appcontroller on Target HW exited with code 0
I'm able to run the app again, without rebooting the device.
Reproducibility: 100% **
- relates to
- 
                     QTQAINFRA-6225
        Qt Test Attack - Q2, 2024 QTQAINFRA-6225
        Qt Test Attack - Q2, 2024-           
- Open
 
-         
| For Gerrit Dashboard: QTBUG-124396 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 571049,1 | PulseAudio: don't wait drain when stopping | dev | qt/qtmultimedia | Status: ABANDONED | 0 | 0 | 
| 571432,3 | Add a note in QAudioSink::stop() and update the example | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 571914,2 | Add a note in QAudioSink::stop() and update the example | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 571924,2 | Add a note in QAudioSink::stop() and update the example | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 571952,2 | Add a note in QAudioSink::stop() and update the example | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |