Add a note in QAudioSink::stop() and update the example

On some platforms(Linux, Darwin, etc)
QAudioSink::stop() syncronously drains the underlying audio
buffer, which may cause delays accordingly to the buffer
payload.

Fixes: QTBUG-124396
Pick-to: 6.5
Change-Id: Ia6d124d8d6362e6c422006d8682beb3d8d4a2431
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 0ca230c2f9e248692ae7b16750d3178ba88c3e02)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2311cbdea06379d4f5514d74f159c3eb01580765)